methods.basics.Methods.scala.error
Compilation error:
Methods:2: error: '(' expected but identifier found.
  while !isOverBaggle()
        ^