methods.basics.Methods.scala.code
def goAndGet() {
  while !isOverBaggle()
  	forward();
  pickupBaggle();
  goto(0,6);
  dropBaggle();
  
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}
